--- a/4 Component PR EOS for Z-Factor & Viscosity.ipynb
+++ b/4 Component PR EOS for Z-Factor & Viscosity.ipynb
@@ -16,10 +16,12 @@
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "import pr_z_v2 as pr_z\n",
+    "import pyrestoolbox as rtb\n",
+    "import pr_z_v3 as pr_z\n",
     "R, mwAir, degF2R = 10.731577089016, 28.97, 459.67"
    ]
   },
@@ -33,8 +35,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.531988\n",
-      "Viscosity = 0.050083 cP\n"
+      "Z = 0.557459\n",
+      "Viscosity = 0.046881 cP\n"
      ]
     }
    ],
@@ -60,6 +62,29 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c7f1b67c-9261-4c3b-8e44-c327e8ca0fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = 0.5319876082532834\n",
+      "Viscosity = 0.05008288126264744 cP\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With pyResToolbox\n",
+    "Z = rtb.gas_z(psia, 0.7, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
+    "visc = rtb.gas_ug(psia, 0.7, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
+    "print('Z =', Z)\n",
+    "print('Viscosity =', visc, 'cP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9878f248",
    "metadata": {},
    "outputs": [
@@ -67,8 +92,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.871013\n",
-      "Viscosity = 0.02194 cP\n"
+      "Z = 0.870269\n",
+      "Viscosity = 0.022199 cP\n",
+      "Z = 0.8710126798826894\n",
+      "Viscosity = 0.021940408845538845 cP\n"
      ]
     }
    ],
@@ -87,12 +114,18 @@
     "visc = pr_z.lbc(Z, degf, psia, sg = sg, co2=co2, h2s=h2s, n2=n2)\n",
     "\n",
     "print('Z =', round(Z, 6))\n",
-    "print('Viscosity =', round(visc, 6), 'cP')"
+    "print('Viscosity =', round(visc, 6), 'cP')\n",
+    "\n",
+    "# With pyResToolbox\n",
+    "Z = rtb.gas_z(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
+    "visc = rtb.gas_ug(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
+    "print('Z =', Z)\n",
+    "print('Viscosity =', visc, 'cP')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "12bd8d83-1bc0-4ccc-b1ba-665eb73a74b4",
    "metadata": {},
    "outputs": [
@@ -100,8 +133,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.900498\n",
-      "Viscosity = 0.020553 cP\n"
+      "Z = 0.903868\n",
+      "Viscosity = 0.020552 cP\n",
+      "Z = 0.900497866102124\n",
+      "Viscosity = 0.020553261763418665 cP\n"
      ]
     }
    ],
@@ -120,13 +155,19 @@
     "visc = pr_z.lbc(Z, degf, psia, sg = sg, co2=co2, h2s=h2s, n2=n2)\n",
     "\n",
     "print('Z =', round(Z, 6))\n",
-    "print('Viscosity =', round(visc, 6), 'cP')"
+    "print('Viscosity =', round(visc, 6), 'cP')\n",
+    "\n",
+    "# With pyResToolbox\n",
+    "Z = rtb.gas_z(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
+    "visc = rtb.gas_ug(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
+    "print('Z =', Z)\n",
+    "print('Viscosity =', visc, 'cP')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b70d4c-750c-46fa-af08-0e45b2efa59f",
+   "id": "949606af-37d7-4f41-a8f8-5c69ad1d0910",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
