--- a/4 Component PR EOS for Z-Factor & Viscosity.ipynb
+++ b/4 Component PR EOS for Z-Factor & Viscosity.ipynb
@@ -21,7 +21,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pyrestoolbox as rtb\n",
-    "import pr_z_v5 as pr_z\n",
+    "import pr_z_v6 as pr_z\n",
     "R, mwAir, degF2R = 10.731577089016, 28.97, 459.67"
    ]
   },
@@ -36,7 +36,7 @@
      "output_type": "stream",
      "text": [
       "Z = 0.536868\n",
-      "Viscosity = 0.04965 cP\n"
+      "Viscosity = 0.049553 cP\n"
      ]
     }
    ],
@@ -61,30 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c7f1b67c-9261-4c3b-8e44-c327e8ca0fe3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Z = 0.5319876082532834\n",
-      "Viscosity = 0.05008288126264744 cP\n"
-     ]
-    }
-   ],
-   "source": [
-    "# With pyResToolbox\n",
-    "Z = rtb.gas_z(psia, 0.7, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
-    "visc = rtb.gas_ug(psia, 0.7, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
-    "print('Z =', Z)\n",
-    "print('Viscosity =', visc, 'cP')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9878f248",
    "metadata": {},
    "outputs": [
@@ -92,10 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.865362\n",
-      "Viscosity = 0.022823 cP\n",
-      "Z = 0.8710126798826894\n",
-      "Viscosity = 0.021940408845538845 cP\n"
+      "Z = 0.849523\n",
+      "Viscosity = 0.023282 cP\n"
      ]
     }
    ],
@@ -114,18 +89,12 @@
     "visc = pr_z.lbc(Z, degf, psia, sg = sg, co2=co2, h2s=h2s, n2=n2)\n",
     "\n",
     "print('Z =', round(Z, 6))\n",
-    "print('Viscosity =', round(visc, 6), 'cP')\n",
-    "\n",
-    "# With pyResToolbox\n",
-    "Z = rtb.gas_z(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
-    "visc = rtb.gas_ug(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
-    "print('Z =', Z)\n",
-    "print('Viscosity =', visc, 'cP')"
+    "print('Viscosity =', round(visc, 6), 'cP')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "12bd8d83-1bc0-4ccc-b1ba-665eb73a74b4",
    "metadata": {},
    "outputs": [
@@ -133,10 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.877843\n",
-      "Viscosity = 0.021821 cP\n",
-      "Z = 0.900497866102124\n",
-      "Viscosity = 0.020553261763418665 cP\n"
+      "Z = 0.895561\n",
+      "Viscosity = 0.022047 cP\n"
      ]
     }
    ],
@@ -155,13 +122,7 @@
     "visc = pr_z.lbc(Z, degf, psia, sg = sg, co2=co2, h2s=h2s, n2=n2)\n",
     "\n",
     "print('Z =', round(Z, 6))\n",
-    "print('Viscosity =', round(visc, 6), 'cP')\n",
-    "\n",
-    "# With pyResToolbox\n",
-    "Z = rtb.gas_z(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s)\n",
-    "visc = rtb.gas_ug(psia, sg, degf, zmethod = 'PR', n2 = n2, co2 = co2, h2s = h2s, zee = Z)\n",
-    "print('Z =', Z)\n",
-    "print('Viscosity =', visc, 'cP')"
+    "print('Viscosity =', round(visc, 6), 'cP')\n"
    ]
   },
   {
@@ -189,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
