--- a/5 Component PR EOS for Z-Factor & Viscosity.ipynb
+++ b/5 Component PR EOS for Z-Factor & Viscosity.ipynb
@@ -22,13 +22,13 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "#import pyrestoolbox as rtb\n",
-    "import pr_z_v7 as pr_z\n",
+    "import pr_z_v8_New_SK as pr_z\n",
     "R, mwAir, degF2R = 10.731577089016, 28.97, 459.67"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "9878f248",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,8 @@
      "output_type": "stream",
      "text": [
       "100% 0.7 SG Hydrocarbon @ 3200 psia and 180 degF\n",
-      "Z = 0.860446\n",
-      "Viscosity = 0.023372 cP\n"
+      "Z = 0.848555\n",
+      "Viscosity = 0.023682 cP\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "4d964126-2a41-421b-8b37-5e7ee0e40b8b",
    "metadata": {},
    "outputs": [
@@ -68,8 +68,8 @@
      "output_type": "stream",
      "text": [
       "100% CO2 @ 3200 psia and 180 degF\n",
-      "Z = 0.534136\n",
-      "Viscosity = 0.052082 cP\n"
+      "Z = 0.531031\n",
+      "Viscosity = 0.05304 cP\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "949606af-37d7-4f41-a8f8-5c69ad1d0910",
    "metadata": {},
    "outputs": [
@@ -98,8 +98,8 @@
      "output_type": "stream",
      "text": [
       "100% H2S @ 3200 psia and 180 degF\n",
-      "Z = 0.368077\n",
-      "Viscosity = 0.086727 cP\n"
+      "Z = 0.365694\n",
+      "Viscosity = 0.088273 cP\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "795864f0-a3cf-469a-9f9b-36c539e70b4d",
    "metadata": {},
    "outputs": [
@@ -126,8 +126,8 @@
      "output_type": "stream",
      "text": [
       "100% N2 @ 3200 psia and 180 degF\n",
-      "Z = 1.105499\n",
-      "Viscosity = 0.02432 cP\n"
+      "Z = 1.105497\n",
+      "Viscosity = 0.024426 cP\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "329a06fc-42e8-41c0-88bc-c5cc0f0f5843",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
      "text": [
       "100% H2 @ 3200 psia and 180 degF\n",
       "Z = 1.099284\n",
-      "Viscosity = 0.009215 cP\n"
+      "Viscosity = 0.009229 cP\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "12bd8d83-1bc0-4ccc-b1ba-665eb73a74b4",
    "metadata": {},
    "outputs": [
@@ -181,8 +181,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.89059\n",
-      "Viscosity = 0.022152 cP\n"
+      "Z = 0.898794\n",
+      "Viscosity = 0.021929 cP\n"
      ]
     }
    ],
