--- a/5 Component PR EOS for Z-Factor & Viscosity.ipynb
+++ b/5 Component PR EOS for Z-Factor & Viscosity.ipynb
@@ -22,7 +22,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "#import pyrestoolbox as rtb\n",
-    "import pr_z_v8_New_SK as pr_z\n",
+    "import pr_z_v9 as pr_z\n",
     "R, mwAir, degF2R = 10.731577089016, 28.97, 459.67"
    ]
   },
@@ -37,8 +37,8 @@
      "output_type": "stream",
      "text": [
       "100% 0.7 SG Hydrocarbon @ 3200 psia and 180 degF\n",
-      "Z = 0.848555\n",
-      "Viscosity = 0.023682 cP\n"
+      "Z = 0.847497\n",
+      "Viscosity = 0.022764 cP\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
      "text": [
       "100% CO2 @ 3200 psia and 180 degF\n",
       "Z = 0.531031\n",
-      "Viscosity = 0.05304 cP\n"
+      "Viscosity = 0.050445 cP\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
      "text": [
       "100% H2S @ 3200 psia and 180 degF\n",
       "Z = 0.365694\n",
-      "Viscosity = 0.088273 cP\n"
+      "Viscosity = 0.089003 cP\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
      "text": [
       "100% N2 @ 3200 psia and 180 degF\n",
       "Z = 1.105497\n",
-      "Viscosity = 0.024426 cP\n"
+      "Viscosity = 0.02397 cP\n"
      ]
     }
    ],
@@ -154,8 +154,8 @@
      "output_type": "stream",
      "text": [
       "100% H2 @ 3200 psia and 180 degF\n",
-      "Z = 1.099284\n",
-      "Viscosity = 0.009229 cP\n"
+      "Z = 1.103739\n",
+      "Viscosity = 0.010669 cP\n"
      ]
     }
    ],
@@ -181,8 +181,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z = 0.898794\n",
-      "Viscosity = 0.021929 cP\n"
+      "Z = 0.899271\n",
+      "Viscosity = 0.021366 cP\n"
      ]
     }
    ],
@@ -202,6 +202,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4a30d04-ebe9-4fb2-bd16-1bd338fdec5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "156401a2",
    "metadata": {},
    "outputs": [],
    "source": []
