--- a/Residual error review_9.ipynb
+++ b/Residual error review_9.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "a3cf59aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'gerg2' from 'C:\\\\Users\\\\burmr\\\\OneDrive - Santos\\\\Work in progress\\\\Python\\\\0-ResEng\\\\Z-Factors\\\\Inerts3\\\\gerg2.py'>"
+       "<module 'gerg2' from 'C:\\\\Users\\\\vinom\\\\OneDrive - Santos\\\\Work in progress\\\\Python\\\\0-ResEng\\\\Z-Factors\\\\Inerts3\\\\gerg2.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "b8a06f33-5a6d-4506-bf3d-5d9152fc5464",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "(343.0080000000004, 667.0290000000002)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "7bab815d",
    "metadata": {},
    "outputs": [
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "18a8ff9e-fb12-4044-b020-0a7fb52c8c37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.37087760321031565, 0.02741690210952654)"
+       "(0.37087760321031565, 0.027325484914459797)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "4c87d9e5-378c-4822-b945-cca70e4e9634",
    "metadata": {},
    "outputs": [],
@@ -1789,7 +1789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
